--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: LoomCollective
 description: Clean typography, dark mode, computational essays.
 # url: "https://loomcollective.ai"
-# url: "https://loomcollective.github.io"
+url: "https://loomcollective.github.io"
 baseurl: ""
 author: paul-hobson
 lang: en
