--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,7 +1,7 @@
 paul-hobson:
   name: Paul Hobson
   bio: >
-    Glaciologist and environmental modeller. Field experience on glaciers in the Swiss Alps
+    Former Glaciologist and environmental modeller. Field experience on glaciers in the Swiss Alps
     and Canadian Rockies. Interested in ice dynamics, catchment hydrology, and the
     intersection of computational science and long-form writing.
   image: /assets/images/authors/paul-hobson.jpg
