carousel and gallery functions added

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -9,3 +9,16 @@ paul-hobson:
   website: ""
   twitter: ""
   github: ""
+
+# Demo second author — demonstrates co-authorship feature. Replace with a real
+# collaborator when needed; delete this entry if you never need multi-author posts.
+sophie-marchand:
+  name: Sophie Marchand
+  bio: >
+    Glaciologist and remote sensing specialist. Research focus on mass balance
+    measurements and surface velocity fields in alpine glacier systems.
+  image: ""
+  location: "Grenoble, France"
+  website: ""
+  twitter: ""
+  github: ""
