--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: LoomCollective
+title: Loom
 description: Jekyll theme. Clean typography, dark mode, computational essays.
 logo: /assets/images/loom_collective.jpg
 # url: "https://loomcollective.ai"
